Added default commands and implemented defaults resetting.

--- a/WireGuardCommand/App.config
+++ b/WireGuardCommand/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <WireGuardCommand.Properties.Settings>
             <setting name="DefaultCommand" serializeAs="String">
-                <value />
+                <value>add allowed-address={client-address} comment="peer {client-id}" interface="{interface}" preshared-key="{client-preshared}" public-key="{client-public}"</value>
             </setting>
             <setting name="DefaultDNS" serializeAs="String">
                 <value>10.0.100.254</value>
@@ -32,7 +32,7 @@
                 <value />
             </setting>
             <setting name="DefaultPrefix" serializeAs="String">
-                <value />
+                <value>/interface wireguard peers</value>
             </setting>
             <setting name="DefaultPresharedKeys" serializeAs="String">
                 <value>False</value>
