Added open folder dialog for saving files.

--- a/WireGuardCommand/App.config
+++ b/WireGuardCommand/App.config
@@ -40,6 +40,9 @@
             <setting name="DefaultSubnet" serializeAs="String">
                 <value>10.0.0.0/24</value>
             </setting>
+            <setting name="SaveLocation" serializeAs="String">
+                <value />
+            </setting>
         </WireGuardCommand.Properties.Settings>
     </userSettings>
 </configuration>
