--- a/WireGuardCommand/Properties/Settings.settings
+++ b/WireGuardCommand/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="DefaultSubnet" Type="System.String" Scope="User">
       <Value Profile="(Default)">10.0.0.0/24</Value>
     </Setting>
+    <Setting Name="SaveLocation" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
