--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -7,7 +7,7 @@
   "DefaultNoClients": 3,
   "DefaultSubnet": "10.0.0.0/24",
 
-  "DefaultIPs": "0.0.0.0/0",
+  "DefaultIPs": "0.0.0.0/0, ::/0",
   "DefaultEndpoint": "remote.domain.com:1234",
   "DefaultDNS": "10.0.100.254",
 
