Added save to zip option.

--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -13,6 +13,7 @@
 
   "DefaultInterface": "WireGuardInterface1",
   "DefaultPresharedKeys": true,
+  "DefaultSaveToZip": true,
 
   "SaveLocation": ""
 }
