--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -14,6 +14,7 @@
   "DefaultInterface": "WireGuardInterface1",
   "DefaultPresharedKeys": true,
   "DefaultSaveToZip": true,
+  "DefaultAssignLastIP":  true,
 
   "SaveLocation": ""
 }
