Removed WPF project for Blazor re-write.

--- a/WireGuardCommand/appsettings.Development.json
+++ b/WireGuardCommand/appsettings.Development.json
@@ -1,13 +1,9 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "WireGuardCommand": {
-    "ProjectsPath": "./Projects",
-    "EncryptByDefault": true
   }
 }
