Added project management interface including list & create.

--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "WireGuardCommand": {
-    "ProjectsPath": "./Projects",
+    "ProjectsPath": ".\\Projects",
     "EncryptByDefault": true
   }
 }
