--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "WireGuardCommand": {
     "ProjectsPath": ".\\Projects",
-    "EncryptByDefault": true
+    "EncryptByDefault": false
   }
 }
