--- a/WireGuardCommand/WireGuardCommand.csproj
+++ b/WireGuardCommand/WireGuardCommand.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="23.6.2" />
+    <PackageReference Include="IPNetwork2" Version="3.0.667" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
