--- a/WireGuardCommand/WireGuardCommand.csproj
+++ b/WireGuardCommand/WireGuardCommand.csproj
@@ -5,6 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Components\Alert.razor.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Components\Alert.razor.css" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="23.6.2" />
     <PackageReference Include="IPNetwork2" Version="3.0.667" />
   </ItemGroup>
