Increased size of seed.

--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "WireGuardCommand": {
     "ProjectsPath": ".\\Projects",
-    "EncryptByDefault": false
+    "EncryptByDefault": false,
+    "SeedSize": 2048
   }
 }
