--- a/WireGuardCommand/WireGuardCommand.csproj
+++ b/WireGuardCommand/WireGuardCommand.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="23.6.2" />
     <PackageReference Include="IPNetwork2" Version="3.0.667" />
+    <PackageReference Include="SharpZipLib" Version="1.4.2" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
