Implemented basic configuration page.

--- a/WireGuardCommand/appsettings.json
+++ b/WireGuardCommand/appsettings.json
@@ -6,10 +6,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "WireGuardCommand": {
-    "ProjectsPath": ".\\Projects",
-    "EncryptByDefault": false,
-    "SeedSize": 2048
-  }
+  "AllowedHosts": "*"
 }
