Added rider launch profile and gitignore entry for .idea folder.

--- a/WireGuardCommand/Properties/launchSettings.json
+++ b/WireGuardCommand/Properties/launchSettings.json
@@ -13,6 +13,12 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5087"
+    },
+    "Rider": {
+      "commandName": "Executable",
+      "workingDirectory": "$(ProjectDir)",
+      "executablePath": "dotnet",
+      "commandLineArgs": "watch run debug --launch-profile http"
     }
   },
   "iisSettings": {
